--- a/Ford Vehicle Collection/Base.lproj/Main.storyboard
+++ b/Ford Vehicle Collection/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,19 +16,19 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="plM-Dq-PxR">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="813"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="plM-Dq-PxR" secondAttribute="trailing" id="5Rj-L3-E1b"/>
-                            <constraint firstAttribute="bottom" secondItem="plM-Dq-PxR" secondAttribute="bottom" id="9Zz-ix-qdf"/>
-                            <constraint firstItem="plM-Dq-PxR" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Avh-HM-24q"/>
-                            <constraint firstItem="plM-Dq-PxR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sk6-IC-Dfq"/>
+                            <constraint firstItem="plM-Dq-PxR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7ME-yd-EBb"/>
+                            <constraint firstAttribute="trailing" secondItem="plM-Dq-PxR" secondAttribute="trailing" id="AJw-Gy-7YY"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="plM-Dq-PxR" secondAttribute="bottom" constant="-84" id="NMA-Ca-15T"/>
+                            <constraint firstItem="plM-Dq-PxR" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="cL5-eR-YHo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -42,10 +43,10 @@
             <objects>
                 <viewController id="eTb-On-sC8" customClass="SUVCrossover" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jgz-X0-psX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" translatesAutoresizingMaskIntoConstraints="NO" id="C5w-j2-8gC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C5w-j2-8gC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -57,30 +58,107 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zyb-pq-0Au" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-159.19999999999999" y="799.50738916256159"/>
+            <point key="canvasLocation" x="52" y="802"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="rym-dQ-juR">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="PlH-LT-71g" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="8jE-gy-NsY">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="8jE-gy-NsY">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="WMt-Xw-m1b"/>
                         <segue destination="eTb-On-sC8" kind="relationship" relationship="viewControllers" id="G1U-9t-nKE"/>
+                        <segue destination="W2m-q9-yPC" kind="relationship" relationship="viewControllers" id="Cot-Fe-VCk"/>
+                        <segue destination="EIW-eD-6af" kind="relationship" relationship="viewControllers" id="M7i-vg-gyr"/>
+                        <segue destination="HNw-tI-ZHV" kind="relationship" relationship="viewControllers" id="v3r-SG-5OS"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZPE-mD-7cI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-681" y="83"/>
+            <point key="canvasLocation" x="-930" y="81"/>
+        </scene>
+        <!--PERFORMANCE-->
+        <scene sceneID="Hqz-IF-qeg">
+            <objects>
+                <viewController title="PERFORMANCE" id="W2m-q9-yPC" customClass="PerformanceVehicles" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lfe-0L-k1Q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ap-JF-86I">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="cJA-XK-wAY"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="PERFORMANCE" image="performance" selectedImage="performance" id="V6E-WZ-8I3">
+                        <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mBi-5n-WSI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="52" y="-652"/>
+        </scene>
+        <!--TRUCKSVANS-->
+        <scene sceneID="PNT-oU-LEJ">
+            <objects>
+                <viewController title="TRUCKSVANS" id="EIW-eD-6af" customClass="TrucksVans" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="t0t-Er-KKJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gFc-aH-uqV">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="RPc-EC-rRA"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="TRUCKS" image="trucks&amp;Vans" selectedImage="trucks&amp;Vans" id="umJ-iE-9SG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NuE-f1-XUB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1038" y="-702"/>
+        </scene>
+        <!--EV-->
+        <scene sceneID="2ds-Qa-7iA">
+            <objects>
+                <viewController id="HNw-tI-ZHV" customClass="HybridEVs" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="E5q-MS-W0F">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1FN-bf-6nr">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="fHA-Ml-jd8"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="EV" image="EV" selectedImage="EV" id="wXi-SE-4Jj" colorLabel="IBBuiltInLabel-Green">
+                        <color key="badgeColor" red="0.0" green="0.98106676339999999" blue="0.57369142770000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EuL-K5-tjB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1039" y="843"/>
         </scene>
     </scenes>
     <resources>
         <image name="Cars" width="25" height="25"/>
+        <image name="EV" width="25" height="25"/>
         <image name="SUV" width="25" height="25"/>
         <image name="ford background-1" width="240" height="366"/>
+        <image name="performance" width="25" height="25"/>
+        <image name="trucks&amp;Vans" width="25" height="25"/>
     </resources>
 </document>
