--- a/Ford Vehicle Collection/Base.lproj/Main.storyboard
+++ b/Ford Vehicle Collection/Base.lproj/Main.storyboard
@@ -127,17 +127,108 @@
         <!--SUV-->
         <scene sceneID="Yqy-bU-5R9">
             <objects>
-                <viewController id="eTb-On-sC8" customClass="SUVCrossover" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="eTb-On-sC8" customClass="SUVViewController" customModule="Ford_Vehicle_Collection" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jgz-X0-psX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C5w-j2-8gC">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ford" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C5w-j2-8gC">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YJN-Xw-0Ez">
+                                <rect key="frame" x="0.0" y="44" width="375" height="665"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sAy-Dn-8GG">
+                                    <size key="itemSize" width="315" height="503"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="QqL-fL-zZK" customClass="SUVCell" customModule="Ford_Vehicle_Collection" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="81" width="315" height="503"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="315" height="503"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <visualEffectView opaque="NO" alpha="0.89999997615814209" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y25-oR-XLb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="315" height="503"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="yuJ-9k-2m2">
+                                                        <rect key="frame" x="0.0" y="0.0" width="315" height="503"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <subviews>
+                                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NXs-UP-pls">
+                                                                <rect key="frame" x="17" y="161" width="281" height="182"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="182" id="fUr-XU-aUA"/>
+                                                                </constraints>
+                                                            </imageView>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHR-or-dOl">
+                                                                <rect key="frame" x="83" y="111" width="150" height="27"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="27" id="pHa-Ad-3gg"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qsq-lK-0U7">
+                                                                <rect key="frame" x="65" y="350" width="184" height="27"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="27" id="RtP-qS-rpt"/>
+                                                                </constraints>
+                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="Qsq-lK-0U7" firstAttribute="leading" secondItem="yuJ-9k-2m2" secondAttribute="leading" constant="65" id="6Gl-XQ-UaW"/>
+                                                            <constraint firstItem="Qsq-lK-0U7" firstAttribute="centerX" secondItem="yuJ-9k-2m2" secondAttribute="centerX" id="IPY-6o-5yQ"/>
+                                                            <constraint firstItem="NXs-UP-pls" firstAttribute="centerY" secondItem="yuJ-9k-2m2" secondAttribute="centerY" id="IbM-J8-6Wa"/>
+                                                            <constraint firstItem="NXs-UP-pls" firstAttribute="leading" secondItem="yuJ-9k-2m2" secondAttribute="leading" constant="17" id="Lgk-lX-XzV"/>
+                                                            <constraint firstItem="jHR-or-dOl" firstAttribute="leading" secondItem="yuJ-9k-2m2" secondAttribute="leading" constant="83" id="ado-U7-4ub"/>
+                                                            <constraint firstItem="jHR-or-dOl" firstAttribute="centerX" secondItem="NXs-UP-pls" secondAttribute="centerX" id="d9W-Gd-2nB"/>
+                                                            <constraint firstItem="Qsq-lK-0U7" firstAttribute="top" secondItem="NXs-UP-pls" secondAttribute="bottom" constant="7" id="nBV-h9-4rH"/>
+                                                            <constraint firstItem="NXs-UP-pls" firstAttribute="centerX" secondItem="Qsq-lK-0U7" secondAttribute="centerX" id="tTV-cz-BFj"/>
+                                                            <constraint firstItem="NXs-UP-pls" firstAttribute="top" secondItem="jHR-or-dOl" secondAttribute="bottom" constant="23" id="zql-F0-gpX"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <blurEffect style="light"/>
+                                                </visualEffectView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Y25-oR-XLb" secondAttribute="trailing" id="NL5-tv-CSQ"/>
+                                            <constraint firstItem="Y25-oR-XLb" firstAttribute="leading" secondItem="QqL-fL-zZK" secondAttribute="leading" id="Qro-9v-Amf"/>
+                                            <constraint firstAttribute="bottom" secondItem="Y25-oR-XLb" secondAttribute="bottom" id="TxB-tA-3cN"/>
+                                            <constraint firstItem="Y25-oR-XLb" firstAttribute="top" secondItem="QqL-fL-zZK" secondAttribute="top" id="hUk-rM-WLg"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="SUVcellImage" destination="NXs-UP-pls" id="imi-G1-9a9"/>
+                                            <outlet property="nameLabel" destination="jHR-or-dOl" id="SZo-PZ-LNN"/>
+                                            <outlet property="priceLabel" destination="Qsq-lK-0U7" id="Hw0-YC-5XD"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="eTb-On-sC8" id="l2c-zT-e0c"/>
+                                    <outlet property="delegate" destination="eTb-On-sC8" id="02z-7a-eqz"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YJN-Xw-0Ez" firstAttribute="trailing" secondItem="C5w-j2-8gC" secondAttribute="trailing" id="9ii-S4-2yp"/>
+                            <constraint firstItem="C5w-j2-8gC" firstAttribute="top" secondItem="jgz-X0-psX" secondAttribute="top" id="Biz-Qk-t4D"/>
+                            <constraint firstItem="YJN-Xw-0Ez" firstAttribute="leading" secondItem="C5w-j2-8gC" secondAttribute="leading" id="PeL-gA-hh2"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="C5w-j2-8gC" secondAttribute="bottom" constant="-83" id="Q4G-nP-kL3"/>
+                            <constraint firstItem="YJN-Xw-0Ez" firstAttribute="leading" secondItem="jgz-X0-psX" secondAttribute="leading" id="YGx-9c-eBx"/>
+                            <constraint firstAttribute="trailing" secondItem="YJN-Xw-0Ez" secondAttribute="trailing" id="bic-ql-lqe"/>
+                            <constraint firstAttribute="bottom" secondItem="YJN-Xw-0Ez" secondAttribute="bottom" constant="20" symbolic="YES" id="iF5-Sj-YJG"/>
+                            <constraint firstItem="YJN-Xw-0Ez" firstAttribute="top" secondItem="leG-Hq-bPz" secondAttribute="top" id="uRT-lh-eHh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="leG-Hq-bPz"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="SUV" image="SUV" selectedImage="SUV" id="GX5-8D-MfK"/>
@@ -177,7 +268,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ap-JF-86I">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Ford" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ap-JF-86I">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -201,7 +292,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gFc-aH-uqV">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Ford" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gFc-aH-uqV">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -223,7 +314,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ford background-1" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1FN-bf-6nr">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Ford" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1FN-bf-6nr">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -245,7 +336,6 @@
         <image name="EV" width="25" height="25"/>
         <image name="Ford" width="213" height="320"/>
         <image name="SUV" width="25" height="25"/>
-        <image name="ford background-1" width="240" height="366"/>
         <image name="performance" width="25" height="25"/>
         <image name="trucks&amp;Vans" width="25" height="25"/>
     </resources>
