--- a/Ford Vehicle Collection/Base.lproj/Main.storyboard
+++ b/Ford Vehicle Collection/Base.lproj/Main.storyboard
@@ -268,13 +268,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="729"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Ford" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ap-JF-86I">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ford" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1ap-JF-86I">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zif-vO-alr">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Zif-vO-alr">
                                 <rect key="frame" x="0.0" y="44" width="375" height="665"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cmo-PE-aDs">
                                     <size key="itemSize" width="315" height="503"/>
@@ -283,7 +281,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="226-na-goV" customClass="CarCell" customModule="Ford_Vehicle_Collection" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="226-na-goV" customClass="PerformanceCell" customModule="Ford_Vehicle_Collection" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="81" width="315" height="503"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -344,9 +342,9 @@
                                             <constraint firstItem="Lhd-bt-ScD" firstAttribute="leading" secondItem="226-na-goV" secondAttribute="leading" id="mun-NS-Zad"/>
                                         </constraints>
                                         <connections>
-                                            <outlet property="cellImage" destination="XDr-7Q-4WG" id="SKE-Ma-bNS"/>
-                                            <outlet property="nameLabel" destination="yTW-no-AWk" id="vIg-gg-9Gj"/>
-                                            <outlet property="priceLabel" destination="wSb-96-DAf" id="sZF-5H-hfx"/>
+                                            <outlet property="cellImage" destination="XDr-7Q-4WG" id="U4V-R1-dD3"/>
+                                            <outlet property="nameLabel" destination="yTW-no-AWk" id="x1d-jh-99S"/>
+                                            <outlet property="priceLabel" destination="wSb-96-DAf" id="lax-bY-tHp"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -357,6 +355,16 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1ap-JF-86I" firstAttribute="top" secondItem="lfe-0L-k1Q" secondAttribute="top" id="1M3-8G-wu6"/>
+                            <constraint firstItem="Zif-vO-alr" firstAttribute="top" secondItem="cJA-XK-wAY" secondAttribute="top" id="LcP-RR-SoT"/>
+                            <constraint firstItem="Zif-vO-alr" firstAttribute="leading" secondItem="1ap-JF-86I" secondAttribute="leading" id="RTD-VA-VnY"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="1ap-JF-86I" secondAttribute="bottom" constant="-83" id="YuO-nE-InL"/>
+                            <constraint firstItem="Zif-vO-alr" firstAttribute="leading" secondItem="lfe-0L-k1Q" secondAttribute="leading" id="aIe-jX-jqC"/>
+                            <constraint firstItem="Zif-vO-alr" firstAttribute="trailing" secondItem="1ap-JF-86I" secondAttribute="trailing" id="eEs-Jk-C0t"/>
+                            <constraint firstAttribute="trailing" secondItem="Zif-vO-alr" secondAttribute="trailing" id="qwO-oK-TXl"/>
+                            <constraint firstAttribute="bottom" secondItem="Zif-vO-alr" secondAttribute="bottom" constant="20" symbolic="YES" id="wNM-7e-6Tu"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="cJA-XK-wAY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="PERFORMANCE" image="performance" selectedImage="performance" id="V6E-WZ-8I3">
